Fix findbug issues.
svn path=/trunk/; revision=45880


Former-commit-id: d4e1469bdbf4dd1b3a8c40f88e5381c3c833424e